@@ -1,3 +1,9 @@
+Tue Aug 28 23:17:41 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmlogin.c: s/login/username/ one more time, and in XDMCP
+	  mode call it "Disconnect" not "Quit", but in flexi mode, it should
+	  still be "Quit".
+
 Tue Aug 28 19:23:34 2001  George Lebl <jirka@5z.com>
 
 	* gdm.spec.in: redo restart logic to be a lot smarter and not hang
